[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-blitz-ng"
version = "8.0.0"
description = "Production-ready UDP latency tester with rich CLI, YAML config, SLA checks, and comparison mode."
readme = "README_neural_blitz_ng.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Michigan MindMend Inc." }
]
dependencies = [
  "rich>=13.7.0",
  "PyYAML>=6.0.1",
  "reportlab>=4.2.0",
  "aiohttp>=3.10.0",
]

[project.scripts]
neural-blitz = "neural_blitz_ng:main"

[tool.setuptools]
py-modules = ["neural_blitz_ng"]
