[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-blitz-ng"
version = "9.0.0"
description = "Local-first UDP latency benchmarking and monitoring with SLA checks, Prometheus metrics, and Docker deployment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michigan MindMend Inc." }]
keywords = ["udp", "latency", "monitoring", "prometheus", "network", "benchmark"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
  "aiohttp>=3.10.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.2.0"]
uvloop = ["uvloop>=0.19.0; sys_platform != 'win32'"]
dev = [
  "build>=1.2.0",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "twine>=5.0.0",
  "types-PyYAML>=6.0.0",
]
all = ["neural-blitz-ng[pdf,uvloop,dev]"]

[project.scripts]
neural-blitz = "neural_blitz.cli:main"

[project.urls]
Homepage = "https://github.com/MiMindMendinc/neural-blitz-ng"
Documentation = "https://github.com/MiMindMendinc/neural-blitz-ng#readme"
Repository = "https://github.com/MiMindMendinc/neural-blitz-ng"
Issues = "https://github.com/MiMindMendinc/neural-blitz-ng/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_blitz*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "unit: fast isolated tests",
  "integration: tests involving network or subprocess",
  "slow: long-running tests",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["neural_blitz"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
packages = ["neural_blitz"]
